# redes-neurais-previsao-cesta-basica-Ilheus-Itabuna

./: .gitignore  README.md  accb_custo_total_ilheus.xlsx  accb_custo_total_itabuna.xlsx  configuracoes.conf  configuracoes_graficos.conf  environment.yml  model_CNN.ipynb  model_CNN_TensorFlow.ipynb  model_DeepLSTM_TensorFlow.ipynb  model_DeepRNN_TensorFlow.ipynb  model_LSTM.ipynb  model_LSTM_TensorFlow.ipynb  model_N-Beast_Darts.ipynb  model_RNN.ipynb  model_RNN_Recursivo_TensorFlow.ipynb  model_RNN_TensorFlow.ipynb  model_TFT_Darts.ipynb  pyproject.toml  readme.md  readme.txt
.ipynb_checkpoints/: model_CNN-checkpoint.ipynb  model_CNN_TensorFlow-checkpoint.ipynb  model_LSTM-checkpoint.ipynb  model_LSTM_TensorFlow-checkpoint.ipynb  model_RNN-checkpoint.ipynb  model_RNN_TensorFlow-checkpoint.ipynb
202208/: Tabelas Agosto.rtf
config/: __init__.py  base.py  charts.py  models.py  models.yaml  training.py
data/: accb_custo_total_ilheus.xlsx  accb_custo_total_itabuna.xlsx  precos_mensais.xlsx
datasets_cestas/: accb_custo_total_ilheus.xlsx  accb_custo_total_itabuna.xlsx
resultados/: Acuracia_Modelos.txt  Acuracia_modelos.xlsx  TabelaResultados.xlsx  Tabela_Resultados_Teste.xlsx  Tabela_Resultados_Validação.xlsx  grafico_cesta.ipynb  graficos_12_meses.ipynb  graficos_produtos.ipynb  resultados_previsoes.ipynb  ~$TabelaResultados.xlsx
src/: __init__.py  atualizar_precos.py  cli.py  importar_boletim.py  main.ipynb
testes/: Tabela_Resultados_Teste.xlsx  avaliar_modelo.ipynb
tests/: Tabela_Resultados_Teste.xlsx  avaliar_modelo.ipynb  avaliar_modelos_cv.ipynb  (+4 more)
(+392 files in other folders)
