[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "previsao-cestas"
version = "0.1.0"
description = "Sistema de previsão de preços da cesta básica usando Deep Learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "onnx>=1.19.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "ruff>=0.14.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "tf2onnx>=1.16.1",
]

[project.scripts]
atualizar-precos = "src.atualizar_precos:main"
importar-boletim = "src.importar_boletim:main"
previsao-cestas = "src.cli:cli"

[tool.setuptools.packages.find]
include = ["config*", "src*"]
